--- a/NCHometask23/pom.xml
+++ b/NCHometask23/pom.xml
@@ -37,6 +37,12 @@
 	    <version>1.3.2</version>
 	</dependency>
 
+  <dependency>
+        <groupId>com.oracle</groupId>
+        <artifactId>ojdbc6</artifactId>
+        <version>11.2.0.3</version>
+    </dependency>
+
 
     </dependencies>
 </project>
